--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,6 @@
 eclipse.preferences.version=1
 encoding//res/langs.csv=UTF-8
 encoding//res/user.csv=UTF-8
+encoding//src/fr/simplgame/pss/event/BotListener.java=UTF-8
+encoding/<project>=UTF-8
+encoding/README.md=UTF-8
