--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="res"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Discord 4.1.0"/>
-	<classpathentry kind="lib" path="C:/Users/Megaport/Documents/LIBRARIES/Discord JDA/JDA 4.1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Megaport/Downloads/jython-standalone-2.7.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
